Season Page Completed

--- a/index.html
+++ b/index.html
@@ -82,7 +82,14 @@
                                     </tr>
                                 </thead>
                                 <tbody id="2020TableBody">
-                                    
+                                    <tr>
+                                        <th>1</th>
+                                        <th>XX</th>
+                                        <th>XX</th>
+                                        <th>1</th>
+                                        <th>1</th>
+                                        <th>1</th>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
@@ -126,6 +133,14 @@
                                     </tr>
                                 </thead>
                                 <tbody id="2019TableBody">
+                                    <tr>
+                                        <th>1</th>
+                                        <th>XX</th>
+                                        <th>XX</th>
+                                        <th>1</th>
+                                        <th>1</th>
+                                        <th>1</th>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
@@ -148,12 +163,14 @@
                             <li>
                                 <span class="opener">Season Data</span>
                                 <ul>
-                                    <li><a href="subPages/seasonStats.html">Standings(2)</a></li>
-                                    <li><a href="subPages/seasonStats.html#positionalTrends">Positional Trends(7)</a></li>
+                                    <li><a href="subPages/seasonStats.html">Standings</a></li>
+                                    <li><a href="subPages/seasonStats.html#positionalTrends">Positional Trends</a></li>
                                     <li><a href="subPages/seasonStats.html#powerRankings">Power Rankings</a></li>
-                                    <li><a href="subPages/seasonStats.html#expectedWins">Expected Wins(8)</a></li>
-                                    <li><a href="subPages/seasonStats.html#scheduleDifficulty">Schedule Difficulty(9)</a></li>
-                                    <li><a href="subPages/seasonStats.html#pointPerPosition">Points Per Position(10)</a></li>
+                                    <li><a href="subPages/seasonStats.html#playoffOdds">Playoff Odds</a></li>
+                                    <li><a href="subPages/seasonStats.html#expectedWins">Expected Wins</a></li>
+                                    <li><a href="subPages/seasonStats.html#scheduleDifficulty">Schedule Difficulty</a></li>
+                                    <li><a href="subPages/seasonStats.html#pointPerPosition">Points Per Position</a></li>
+                                    <li><a href="subPages/seasonStats.html#matchupCharts">Matchup Charts</a></li>
                                 </ul>
                             </li>
                             <li>
