Finalized season data (still need to document)

--- a/index.html
+++ b/index.html
@@ -159,29 +159,10 @@
                             <h2>Menu</h2>
                         </header>
                         <ul>
-                            <li><a href="index.html">Homepage</a></li>
-                            <li>
-                                <span class="opener">Season Data</span>
-                                <ul>
-                                    <li><a href="subPages/seasonStats.html">Standings</a></li>
-                                    <li><a href="subPages/seasonStats.html#positionalTrends">Positional Trends</a></li>
-                                    <li><a href="subPages/seasonStats.html#powerRankings">Power Rankings</a></li>
-                                    <li><a href="subPages/seasonStats.html#playoffOdds">Playoff Odds</a></li>
-                                    <li><a href="subPages/seasonStats.html#expectedWins">Expected Wins</a></li>
-                                    <li><a href="subPages/seasonStats.html#scheduleDifficulty">Schedule Difficulty</a></li>
-                                    <li><a href="subPages/seasonStats.html#pointPerPosition">Points Per Position</a></li>
-                                    <li><a href="subPages/seasonStats.html#matchupCharts">Matchup Charts</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <span class="opener">Weekly Results</span>
-                                <ul>
-                                    <li><a href="#">Summary(1) w/ point breakdown</a></li>
-                                    <li><a href="#">Best Ball(3)</a></li>
-                                    <li><a href="#">Top NFL Players(4)</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Matchup Timelines</a></li>
+                            <li><a href="#">Homepage</a></li>
+                            <li><a href="subPages/seasonStats.html">Season Data</a></li>
+                            <li><a href="#">Weekly Results</a></li>
+                            <li><a href="#">Playoff Results</a></li>
                             <li><a href="#">Fantasy Draft</a></li>
                             <li><a href="#">NFL Team Data</a></li>
                             <li><a href="#">NFL Player Data</a></li>
@@ -194,16 +175,9 @@
 
         </div>
 
+        <!-- Firebase Scripts -->
         <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script>
-
-        <!-- Insert this script at the bottom of the HTML, but before you use any Firebase services -->
-
-        <!-- Add the entire Firebase JavaScript SDK -->
-
-        <!-- Initialize Firebase -->
-        
-
 
 		<!-- Scripts -->
         <script src="assets/js/jquery.min.js"></script>
