matchup chart sizing

--- a/subPages/seasonStats.html
+++ b/subPages/seasonStats.html
@@ -417,7 +417,7 @@
                                     Red region are unlucky losses (player loss with overperforming team).
                                 </p>
                             </div>
-                            <div class="col-4 col-12-medium">
+                            <div class="col-4 col-6-medium col-8-small">
                                 <canvas id="matchupChartCanvas" width=100% height=100%></canvas>
                             </div>
                         </div>
