Superlative and Weekly Push

--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
                         <ul>
                             <li><a href="#">Homepage</a></li>
                             <li><a href="subPages/seasonStats.html">Season Data</a></li>
-                            <li><a href="#">Weekly Results</a></li>
+                            <li><a href="subPages/weeklyStats.html">Weekly Results</a></li>
                             <li><a href="#">Playoff Results</a></li>
                             <li><a href="#">Fantasy Draft</a></li>
                             <li><a href="#">NFL Team Data</a></li>
                             <li><a href="#">NFL Player Data</a></li>
-                            <li><a href="#">Season Superlatives</a></li>
+                            <li><a href="subPages/superlatives.html">Season Superlatives</a></li>
                         </ul>
                     </nav>
 
