--- a/subPages/seasonStats.html
+++ b/subPages/seasonStats.html
@@ -438,12 +438,12 @@
                         <ul>
                             <li><a href="../index.html">Homepage</a></li>
                             <li><a href="#">Season Data</a></li>
-                            <li><a href="#">Weekly Results</a></li>
+                            <li><a href="weeklyStats.html">Weekly Results</a></li>
                             <li><a href="#">Playoff Results</a></li>
                             <li><a href="#">Fantasy Draft</a></li>
                             <li><a href="#">NFL Team Data</a></li>
                             <li><a href="#">NFL Player Data</a></li>
-                            <li><a href="#">Season Superlatives</a></li>
+                            <li><a href="superlatives.html">Season Superlatives</a></li>
                         </ul>
                     </nav>
 
