Add NFL Player and NFL Team Pages

--- a/subPages/weeklyStats.html
+++ b/subPages/weeklyStats.html
@@ -281,8 +281,8 @@
                             <li><a href="#">Weekly Results</a></li>
                             <li><a href="#">Playoff Results</a></li>
                             <li><a href="#">Fantasy Draft</a></li>
-                            <li><a href="#">NFL Team Data</a></li>
-                            <li><a href="#">NFL Player Data</a></li>
+                            <li><a href="nflTeamData.html">NFL Team Data</a></li>
+                            <li><a href="nflPlayerData.html">NFL Player Data</a></li>
                             <li><a href="superlatives.html">Season Superlatives</a></li>
                         </ul>
                     </nav>
