--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                             <li><a href="subPages/weeklyStats.html">Weekly Results</a></li>
                             <li><a href="#">Playoff Results</a></li>
                             <li><a href="#">Fantasy Draft</a></li>
-                            <li><a href="#">NFL Team Data</a></li>
-                            <li><a href="#">NFL Player Data</a></li>
+                            <li><a href="subPages/nflTeamData.html">NFL Team Data</a></li>
+                            <li><a href="subPages/nflPlayerData.html">NFL Player Data</a></li>
                             <li><a href="subPages/superlatives.html">Season Superlatives</a></li>
                         </ul>
                     </nav>
