--- a/subPages/seasonStats.html
+++ b/subPages/seasonStats.html
@@ -441,8 +441,8 @@
                             <li><a href="weeklyStats.html">Weekly Results</a></li>
                             <li><a href="#">Playoff Results</a></li>
                             <li><a href="#">Fantasy Draft</a></li>
-                            <li><a href="#">NFL Team Data</a></li>
-                            <li><a href="#">NFL Player Data</a></li>
+                            <li><a href="nflTeamData.html">NFL Team Data</a></li>
+                            <li><a href="nflPlayerData.html">NFL Player Data</a></li>
                             <li><a href="superlatives.html">Season Superlatives</a></li>
                         </ul>
                     </nav>
