Added final pages

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                             <li><a href="#">Homepage</a></li>
                             <li><a href="subPages/seasonStats.html">Season Data</a></li>
                             <li><a href="subPages/weeklyStats.html">Weekly Results</a></li>
-                            <li><a href="#">Playoff Results</a></li>
-                            <li><a href="#">Fantasy Draft</a></li>
+                            <li><a href="subPages/playoffs.html">Playoff Results</a></li>
+                            <li><a href="subPages/draft.html">Fantasy Draft</a></li>
                             <li><a href="subPages/nflTeamData.html">NFL Team Data</a></li>
                             <li><a href="subPages/nflPlayerData.html">NFL Player Data</a></li>
                             <li><a href="subPages/superlatives.html">Season Superlatives</a></li>
