--- a/subPages/nflPlayerData.html
+++ b/subPages/nflPlayerData.html
@@ -175,8 +175,8 @@
                             <li><a href="../index.html">Homepage</a></li>
                             <li><a href="seasonStats.html">Season Data</a></li>
                             <li><a href="weeklyStats.html">Weekly Results</a></li>
-                            <li><a href="#">Playoff Results</a></li>
-                            <li><a href="#">Fantasy Draft</a></li>
+                            <li><a href="playoffs.html">Playoff Results</a></li>
+                            <li><a href="draft.html">Fantasy Draft</a></li>
                             <li><a href="nflTeamData.html">NFL Team Data</a></li>
                             <li><a href="#">NFL Player Data</a></li>
                             <li><a href="superlatives.html">Season Superlatives</a></li>
