--- a/subPages/nflPlayerData.html
+++ b/subPages/nflPlayerData.html
@@ -191,6 +191,7 @@
         <!-- Firebase Scripts -->
         <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-database.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-analytics.js"></script>
 
 		<!-- Scripts -->
         <script src="../assets/js/jquery.min.js"></script>
