--- a/subPages/superlatives.html
+++ b/subPages/superlatives.html
@@ -59,7 +59,11 @@
                         </header>
                         <div class="row gtr-uniform">
                             <div class="col-2 col-12-xsmall">
-                                <input type="radio" id="season-2020" value=2020 name="season-select" onchange="radioChange()" checked>
+                                <input type="radio" id="season-2021" value=2021 name="season-select" onchange="radioChange()" checked>
+                                <label for="season-2021">2021</label>
+                            </div>
+                            <div class="col-2 col-12-xsmall">
+                                <input type="radio" id="season-2020" value=2020 name="season-select" onchange="radioChange()">
                                 <label for="season-2020">2020</label>
                             </div>
                             <div class="col-2 col-12-xsmall">
