Update for 2021 week 1

--- a/index.html
+++ b/index.html
@@ -41,7 +41,30 @@
                         <header class="major">
                             <h2>2021 Season</h2>
                         </header>
-                        <h3>You all better join up!</h3>
+                        <div class="table-wrapper">
+                            <table class="alt sortable center">
+                                <thead>
+                                    <tr>
+                                        <th>Rank</th>
+                                        <th>Team</th>
+                                        <th>Owner</th>
+                                        <th>Wins</th>
+                                        <th>Points For</th>
+                                        <th>Points Against</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="2021TableBody">
+                                    <tr>
+                                        <th>1</th>
+                                        <th>XX</th>
+                                        <th>XX</th>
+                                        <th>1</th>
+                                        <th>1</th>
+                                        <th>1</th>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </section>
 
                     <!-- 2020 Section -->
