--- a/subPages/draft.html
+++ b/subPages/draft.html
@@ -324,6 +324,7 @@
         <script src="../assets/js/main.js"></script>
         <script src="../assets/js/draft.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+        <script src="../assets/js/client.js"></script>
         <script type = "text/javascript">loadDraftStats()</script>
 	</body>
 </html>
