fix to some charts

--- a/subPages/demo.html
+++ b/subPages/demo.html
@@ -144,8 +144,8 @@
         <script src="../assets/js/main.js"></script>
         <script src="../assets/js/demo.js"></script>
         <script src="../assets/js/client.js"></script>
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script>axios.defaults.baseURL = 'https://fantasy.espn.com/apis/v3/games/ffl/seasons/'</script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js"></script>-->
 	</body>
 </html>
