Update draft and main page

--- a/index.html
+++ b/index.html
@@ -36,11 +36,62 @@
                         </ul>
                     </header>
 
+                    <!-- 2022 Section -->
+                    <!--<section>
+                        <header class="major">
+                            <h2>2022 Season</h2>
+                        </header>
+                        <div class="table-wrapper">
+                            <table class="alt sortable center">
+                                <thead>
+                                    <tr>
+                                        <th>Rank</th>
+                                        <th>Team</th>
+                                        <th>Owner</th>
+                                        <th>Wins</th>
+                                        <th>Points For</th>
+                                        <th>Points Against</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="2022TableBody">
+                                    <tr>
+                                        <th>1</th>
+                                        <th>XX</th>
+                                        <th>XX</th>
+                                        <th>1</th>
+                                        <th>1</th>
+                                        <th>1</th>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </section>-->
+
                     <!-- 2021 Section -->
                     <section>
                         <header class="major">
                             <h2>2021 Season</h2>
                         </header>
+                        <div class="row">
+                            <div class="col-4 col-12-medium">
+                                <p><span class="image left"><img src="images/general/1stPlace.png" alt="" /></span>
+                                    <h3>Champion</h3>
+                                    <u>Let Dalvin Cook</u><br>
+                                    K. Sanderson</p>
+                            </div>
+                            <div class="col-4 col-12-medium">
+                                <p><span class="image left"><img src="images/general/2ndPlace.png" alt="" /></span>
+                                    <h3>2<sup>nd</sup> Place</h3>
+                                    <u>Ma Homes Where Ma Heart Is</u><br>
+                                    B. Bettinger</p>
+                            </div>
+                            <div class="col-4 col-12-medium">
+                                <p><span class="image left"><img src="images/general/3rdPlace.png" alt="" /></span>
+                                    <h3>3<sup>rd</sup> Place</h3>
+                                    <u>Got This Drink In My Kupp</u><br>
+                                    S. Ingleton</p>
+                            </div>
+                        </div>
                         <div class="table-wrapper">
                             <table class="alt sortable center">
                                 <thead>
