--- a/subPages/draft.html
+++ b/subPages/draft.html
@@ -59,6 +59,10 @@
                         </header>
                         <div class="row gtr-uniform">
                             <div class="col-2 col-12-xsmall">
+                                <input type="radio" id="season-2022" value=2022 name="season-select" onchange="seasonChange()" checked>
+                                <label for="season-2022">2022</label>
+                            </div>
+                            <div class="col-2 col-12-xsmall">
                                 <input type="radio" id="season-2021" value=2021 name="season-select" onchange="seasonChange()" checked>
                                 <label for="season-2021">2021</label>
                             </div>
