--- a/subPages/draft.html
+++ b/subPages/draft.html
@@ -63,7 +63,7 @@
                                 <label for="season-2022">2022</label>
                             </div>
                             <div class="col-2 col-12-xsmall">
-                                <input type="radio" id="season-2021" value=2021 name="season-select" onchange="seasonChange()" checked>
+                                <input type="radio" id="season-2021" value=2021 name="season-select" onchange="seasonChange()">
                                 <label for="season-2021">2021</label>
                             </div>
                             <div class="col-2 col-12-xsmall">
