--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </header>
 
                     <!-- 2022 Section -->
-                    <!--<section>
+                    <section>
                         <header class="major">
                             <h2>2022 Season</h2>
                         </header>
@@ -65,7 +65,7 @@
                                 </tbody>
                             </table>
                         </div>
-                    </section>-->
+                    </section>
 
                     <!-- 2021 Section -->
                     <section>
