--- a/subPages/weeklyStats.html
+++ b/subPages/weeklyStats.html
@@ -61,7 +61,8 @@
                             <div class="col-3 col-12-small">
                                 <h3>Year</h3>
                                 <select name="yearSelect" id="yearSelect" onchange="changeYear()">
-                                    <option value="2021" selected = "selected">2021</option>
+                                    <option value="2022" selected = "selected">2022</option>
+                                    <option value="2021">2021</option>
                                     <option value="2020">2020</option>
                                     <option value="2019">2019</option>
                                 </select>
